# flutter_media_manager

./: .gitignore  AUDIT_REPORT.md  BUILD.md  README.md  SKILLS.md  SKILLS_IMPLEMENTATION.md  SKILLS_PART2.md  SKILLS_PART3.md  build.sh  codemagic.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml  build_android.yml  build_ios.yml  build_macos.yml
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/advancemediakb/advance_media_kb/: MainActivity.kt
android/app/src/main/kotlin/com/fluttermediamanager/flutter_media_manager/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
docs/: BUILD_GUIDE.md  flutter_learning_guide.html  flutter_learning_guide.md
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ARCHITECTURE.md  main.dart
lib/bloc/: bloc.dart
lib/bloc/album/: album_bloc.dart  album_event.dart  album_state.dart
lib/bloc/app/: app_bloc.dart
lib/bloc/media/: media_bloc.dart  media_event.dart  media_state.dart
lib/bloc/note/: note_bloc.dart  note_event.dart  note_state.dart
lib/bloc/tag/: tag_bloc.dart  tag_event.dart  tag_state.dart
lib/bridge/native/: frb_generated.dart  frb_generated.io.dart  models.dart  native_library.dart
lib/bridge/native/api/: album.dart  album_ffi.dart  enums.dart  import_export.dart  media.dart  media_ffi.dart  note.dart  note_ffi.dart  scanner.dart  search.dart  settings.dart  settings_ffi.dart  tag.dart  tag_ffi.dart
lib/core/design_system/: app_theme.dart  components.dart
lib/core/format/: format_duration.dart
lib/core/i18n/: app_localizations.dart
lib/core/navigation/: app_router.dart
lib/core/permissions/: permission_service.dart
lib/features/album/bloc/: album_bloc.dart
lib/features/album/view/: album_screen.dart
lib/features/home/bloc/: app_bloc.dart  app_event.dart  app_state.dart
lib/features/home/view/: home_screen.dart
lib/features/media/bloc/: import_state_machine.dart  media_bloc.dart
lib/features/media/view/: api_test_screen.dart  media_screen.dart
lib/features/media/widgets/: file_browser_dialog.dart  media_grid.dart  search_bar.dart
lib/features/note/bloc/: note_bloc.dart
lib/features/note/view/: note_edit_screen.dart  note_list_screen.dart
lib/features/search/view/: search_screen.dart
lib/features/search/widgets/: advanced_search_dialog.dart
lib/features/settings/view/: settings_screen.dart
lib/features/tag/bloc/: tag_bloc.dart  tag_event.dart
lib/features/tag/view/: tag_screen.dart
lib/features/viewer/view/: viewer_page.dart
lib/features/viewer/widgets/: audio_player_widget.dart  video_player_widget.dart
lib/functionality/album/: album_bloc.dart  album_event.dart  album_state.dart
lib/functionality/home/: app_bloc.dart
lib/functionality/media/: import_state_machine.dart  media_bloc.dart  media_event.dart  media_state.dart
lib/functionality/note/: note_bloc.dart
lib/functionality/tag/: tag_bloc.dart
lib/screens/: album_screen.dart  api_test_screen.dart  home_screen.dart  media_detail_screen.dart  media_edit_screen.dart  media_screen.dart  note_edit_screen.dart  note_list_screen.dart  screens.dart  search_screen.dart  settings_screen.dart  tag_screen.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: album.dart  import_export.dart  media.dart  note.dart  scanner.dart  search.dart  settings.dart  tag.dart
lib/ui/album/: album_detail_screen.dart  album_screen.dart
lib/ui/home/: home_screen.dart
lib/ui/media/: api_test_screen.dart  media_screen.dart
lib/ui/media/widgets/: file_browser_dialog.dart  media_grid.dart  search_bar.dart  video_thumbnail.dart
lib/ui/note/: note_edit_screen.dart  note_list_screen.dart
lib/ui/search/: search_screen.dart
lib/ui/search/widgets/: advanced_search_dialog.dart
lib/ui/settings/: settings_screen.dart
lib/ui/tag/: tag_screen.dart
lib/ui/viewer/: viewer_page.dart
lib/ui/viewer/widgets/: audio_player_widget.dart  video_player_widget.dart
lib/widgets/: advanced_search_dialog.dart  file_browser_dialog.dart  media_grid.dart  search_bar.dart  widgets.dart
lib/widgets/viewer/: audio_player_widget.dart  image_viewer.dart  video_player_widget.dart  viewer_page.dart
linux/: CMakeLists.txt  my_application.cc
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  flutter_media_manager.podspec
native/src/: ffi_bridge.cpp  ffi_export.h
native/src/db/: database.cpp  database.h
rust/: Cargo.toml
rust/.cargo/: config.toml  config.toml.bak
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: album.rs  enums.rs  import_export.rs  media.rs  mod.rs  note.rs  scanner.rs  search.rs  settings.rs  tag.rs
rust/src/db/: mod.rs  models.rs
scripts/: build.sh  build_all.sh  build_android_arm64.sh  build_ios.sh  build_linux_x64.sh  build_macos.sh  build_web.sh  build_windows_x64.sh
skills/: README.md  skill-00-project-architecture.md  skill-00-project-setup.md  skill-01-data-model.md  skill-02-database-layer.md  skill-03-design-system.md  skill-04-permission-management.md  skill-05-file-scanner.md  skill-06-media-import-pipeline.md  skill-07-thumbnail-generator.md  skill-08-settings-storage.md  skill-09-app-shell-and-navigation.md  skill-10-home-screen.md  skill-11-album-module.md  skill-12-tag-module.md  skill-13-detail-screen.md  skill-14-note-module.md  skill-15-search-module.md  skill-16-settings-screen.md  skill-17-fullscreen-viewer.md  skill-18-internationalization.md  skill-19-state-machine.md  skill-20-testing.md  skill-21-amb-package-format.md
test/: widget  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
