[package]
name = "advance_media_kb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
kamadak-exif = "0.5"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
walkdir = "2.4"
mime_guess = "2.0"
dirs = "5.0"

[dependencies.refinery]
version = "0.8"
features = ["rusqlite"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
